@@ -6,17 +6,18 @@ import dk.via.slaughterhouse.AnimalId;
 import dk.via.slaughterhouse.AnimalsData;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AnimalConverter {
-    public static AnimalData convertTogRPCAnimalData (Animal animal)
-    {
-        return AnimalData.newBuilder().setWeight(animal.getWeight()).build();
+    public static AnimalData convertToGrpcAnimalData(Animal animal) {
+        return AnimalData.newBuilder()
+                .setRegistrationId(animal.getRegistrationId()) // Added registrationId field
+                .setWeight(animal.getWeight())
+                .build();
     }
 
-    public static Animal convertToAnimal(AnimalData animalData)
-    {
-        if (animalData == null)
-        {
+    public static Animal convertToAnimal(AnimalData animalData) {
+        if (animalData == null) {
             return null;
         }
 
@@ -26,27 +27,25 @@ public class AnimalConverter {
         return new Animal(id, weight);
     }
 
-    public static List<Animal> convertToAnimalList(AnimalsData data)
-    {
-        return data.getAnimalsList().stream().map(AnimalConverter::convertToAnimal).toList();
+    public static List<Animal> convertToAnimalList(AnimalsData data) {
+        return data.getAnimalsList().stream()
+                .map(AnimalConverter::convertToAnimal)
+                .collect(Collectors.toList());
     }
 
-    public static AnimalsData convertTogRPCAnimalsData(List<Animal> animals)
-    {
-        List<AnimalData> animalsDataList = animals.stream().map(AnimalConverter::convertTogRPCAnimalData).toList();
+    public static AnimalsData convertToGrpcAnimalsData(List<Animal> animals) {
+        List<AnimalData> animalsDataList = animals.stream()
+                .map(AnimalConverter::convertToGrpcAnimalData)
+                .collect(Collectors.toList());
 
         return AnimalsData.newBuilder().addAllAnimals(animalsDataList).build();
     }
 
-    public static AnimalId convertTogRPCAnimalId(String animalId)
-    {
-        if (animalId == null)
-        {
+    public static AnimalId convertToGrpcAnimalId(String animalId) {
+        if (animalId == null) {
             return null;
         }
 
         return AnimalId.newBuilder().setRegistrationId(animalId).build();
     }
-
-
 }
